# Smart-Factory_AI_Challenge

./: .gitignore  README.md  aug-ablation.ipynb  basemodel.py  demon_shave_trainer.py  pyproject.toml  round3-fullpower-shave.ipynb  round3-fullpower.ipynb  submission.csv  test_inference.ipynb
Jeong_v1/: Net_v1.ipynb  Net_v1.py  README.md  basemodel.py
Jeong_v1/saved/: submission-2.csv  submission.csv
Jeong_v2/: Net_v2.ipynb  Net_v2.py  README.md
Jeong_v2/saved/: submission.csv
Jeong_v3/: Net_v3.ipynb  Net_v3.py  README.md
Jeong_v3/saved/: submission.csv
Original pth files/: inference.py  student_BETA-LION_SHAVED.onnx  student_BIDIR_SHAVED.onnx
Sang_v1/: Net_v1.ipynb  Net_v1.py  README.md  utils.py
Sang_v1/saved/: submission.csv
V7-AH12-FULL-REPRODUCTION/: README.md  requirements.txt  v7_ah12_full_reproduction.ipynb
V9-HONEST-179-180-FROM-SCRATCH/: DIFF-from-iter_001-reproduction.md  HONEST-179-180-core-logic.ipynb  HONEST-179-180-from-scratch.ipynb  MODEL_DESCRIPTION.md  README.md  Sang_v9.py  requirements.txt  status.json  submission.csv
V9-KAGGLE-INFERENCE-FINAL/: README.md  export_pth_to_onnx.py  kaggle-inference.ipynb  local-onnx-test.ipynb  requirements.txt  submission.csv  sym_shape_infer_temp.onnx  verify_onnx_matches_pth.py
V9-KAGGLE-INFERENCE-FINAL/kaggle_artifacts/: ah12_state.pkl  student_BETA-LION_int8.onnx  student_BIDIR_int8.onnx  thresholds.json
base_line/: Baseline 2026-01.ipynb
demon shaver/: demon shave instructions.md  demon_shave_target_finder.py  demon_shave_tester.py  demon_shaver.py
(+1 files in other folders)
