[project]
name = "v9-honest-179-180-from-scratch"
version = "0.1.0"
description = "Development environment for the V9 HONEST 179/180 from-scratch reproduction."
requires-python = ">=3.12,<3.15"
dependencies = [
    # Core scientific
    "numpy==2.4.1",
    "pandas==3.0.0",
    "scikit-learn==1.8.0",

    # Deep learning
    "torch==2.11.0",
    "torchvision==0.26.0",
    "timm==1.0.15",

    # Image / CV
    "pillow==12.2.0",
    "opencv-python==4.13.0.92",

    # Phase D/E feature extraction
    "scikit-image==0.26.0",
    "onnx",
    "onnxruntime==1.26.0",

    # UX
    "tqdm==4.67.3",

    # Jupyter
    "jupyter==1.1.1",
    "nbconvert==7.17.1",
    "ipykernel==6.31.0",
]

[tool.uv]
package = false
